--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,26 +2,34 @@
 /* custom styles                                    */
 /* ************************************************ */
 
-/* main content is used to push button to end of the content */
+/* to hide top area when scrolling */
 
-.main-content {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.cover {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /* total of container margin-top and .header height */
+    height: calc(var(--rem) * 10);
+    background-color: hsl( var(--clr-bg));
+    z-index: 1000;
 }
 
 /* Heading of application */
 
 .header {
-    width: 100%;
+    width: calc(var(--rem) * 36);
     height: calc( var(--rem) * 8);
+    margin-top: calc( var(--rem) * 2);
     padding: calc( var(--rem)) calc( var(--rem) * 1.5);
-    background-color: hsl( var(--clr-dark));
+    position: fixed;
+    z-index: 2000;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     border-bottom: 2px solid hsl( var(--clr-blue) );
+    border-radius: var(--br) var(--br) 0 0;
+    background-color: hsl( var(--clr-dark));
 }
 
 .header > h1 {
@@ -47,7 +55,7 @@ h1 > span {
 /* main content styling of appliation including notes */
 
 main {
-    padding: calc( var(--rem));
+    padding: calc( var(--rem) * 9) calc( var(--rem)) 0;
 }
 
 .card {
@@ -96,22 +104,16 @@ main {
     margin: calc( var(--rem));
 }
 
-.footer button{
-    width: 100%;
-    height: calc( var(--rem) * 12);
-    border-radius: var(--br);
-    color: hsl( var(--clr-dark));
-    background-color: hsl( var(--clr-white));
-    border: none;
-    font-weight: var(--fw-bold);
+.button {
+    position: fixed;
+    bottom: calc( var(--rem) * 4);
+    left: calc(50% + calc(var(--rem) * 9));
+    width: calc( var(--rem) * 7);
+    border-radius: 50%;
+    box-shadow: 0 0 10px 3px hsl( var(--clr-dark));
     cursor: pointer;
 }
 
-.footer button:hover,
-.footer button:focus {
-    color: hsl( var(--clr-black) / .5);
-}
-
-.footer button:active {
-    color: hsl( var(--clr-blue));
+.button:hover {
+    box-shadow: 10px 10px 0px 0px hsl( var(--clr-dark));
 }
